<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimary"
    android:padding="@dimen/padding_8"
    tools:context=".ui.login.SignUpFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/maintitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="@dimen/margin_28"
        android:textSize="@dimen/font_36">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_rounded"
        android:padding="@dimen/padding_8"
        app:layout_constraintTop_toBottomOf="@id/maintitle"
        android:layout_marginTop="@dimen/margin_24">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/SignupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/str_Create_Acc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/font_28"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_2"
            android:maxLines="2"
            android:text="@string/str_start_trading"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            app:layout_constraintTop_toBottomOf="@+id/SignupTitle">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Sign_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_10"
            android:maxLines="2"
            android:text="@string/str_full_name"
            android:textAlignment="textStart"
            android:textSize="@dimen/font_16"
            app:layout_constraintTop_toBottomOf="@+id/subtitle">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Sign_Input_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_6"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/Sign_Name">

        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Sign_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_10"
            android:maxLines="2"
            android:text="@string/Email"
            android:textAlignment="textStart"
            android:textSize="@dimen/font_16"
            app:layout_constraintTop_toBottomOf="@+id/Sign_Input_Name">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Sign_Input_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_6"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/Sign_Email">

        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Sign_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="60dp"
            android:maxLines="2"
            android:text="@string/Password"
            android:textAlignment="textStart"
            android:textSize="@dimen/font_16"
            app:layout_constraintTop_toBottomOf="@+id/Sign_Email">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Sign_Input_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_6"
            android:inputType="numberPassword"
            app:layout_constraintTop_toBottomOf="@+id/Sign_Password">

        </androidx.appcompat.widget.AppCompatEditText>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Sign_ComPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="60dp"
            android:maxLines="2"
            android:text="@string/str_Com_Password"
            android:textAlignment="textStart"
            android:textSize="@dimen/font_16"
            app:layout_constraintTop_toBottomOf="@+id/Sign_Password">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Sign_Input_ComPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_6"
            android:inputType="numberPassword"
            app:layout_constraintTop_toBottomOf="@+id/Sign_ComPassword">

        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_36"
            android:background="@drawable/bg_rounded"
            android:text="@string/Sign_up"
            android:textSize="@dimen/font_24"
            app:layout_constraintTop_toBottomOf="@+id/Sign_Input_ComPassword">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/button_signup"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/Sign_AlreadyAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_10"
                android:text="@string/str_Already_Acc"
                android:textAlignment="center">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/Sign_to_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_10"
                android:textAlignment="center"
                android:text="@string/str_Login"
                android:textSize="@dimen/font_14"
                app:layout_constraintStart_toEndOf="@+id/Sign_AlreadyAcc"
                android:layout_marginStart="@dimen/margin_4">

            </androidx.appcompat.widget.AppCompatTextView>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>