<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimary"
    android:padding="@dimen/padding_8"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_rounded"
        android:padding="@dimen/padding_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageLogo"
            android:layout_width="@dimen/default_image_size_144dp"
            android:layout_height="@dimen/default_image_size_144dp"
            android:layout_marginTop="@dimen/margin_2"
            android:padding="@dimen/padding_4"
            android:src="@drawable/image_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatImageView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/LoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/str_Login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/font_40"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/EmailTitleAndPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_10"
            android:maxLines="2"
            android:text="@string/Enter_Your_Email"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            app:layout_constraintTop_toBottomOf="@+id/LoginTitle">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_10"
            android:maxLines="2"
            android:text="@string/Email"
            android:textAlignment="textStart"
            android:textSize="@dimen/font_16"
            app:layout_constraintTop_toBottomOf="@+id/EmailTitleAndPassword">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Input_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_6"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/Email">

        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="60dp"
            android:maxLines="2"
            android:text="@string/Password"
            android:textAlignment="textStart"
            android:textSize="@dimen/font_16"
            app:layout_constraintTop_toBottomOf="@+id/Email">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Input_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_6"
            android:inputType="numberPassword"
            app:layout_constraintTop_toBottomOf="@+id/Password">

        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_36"
            android:background="@drawable/bg_rounded"
            android:text="@string/str_Login"
            android:textSize="@dimen/font_24"
            app:layout_constraintTop_toBottomOf="@+id/Input_Password">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            android:orientation="horizontal"
            android:gravity="center"
            >

           <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/DontAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_10"
                android:text="@string/dont_have_account"
                android:textAlignment="center">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/Login_to_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_10"
                android:textAlignment="center"
                android:text="@string/Sign_up"
                android:textSize="@dimen/font_14"
                app:layout_constraintStart_toEndOf="@+id/DontAcc"
                android:layout_marginStart="@dimen/margin_4">

            </androidx.appcompat.widget.AppCompatTextView>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>